<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>ydlidar</name>
    <version>0.0.1</version>
    <description>
        The modified ROS 2.0 pkf for original EAI-ydlidar ros wrapper 
    </description>
    <maintainer email="haochih.lin@adlinktech.com">HaoChih Lin</maintainer>
    <maintainer email="alan.chen@adlinktech.com">Alan Chen</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

